; ModuleID = '/home/carl/AnghaBench/lab/q3map2/q3map2/extr_surface.c_MakeDebugPortalSurfs.c'
source_filename = "/home/carl/AnghaBench/lab/q3map2/q3map2/extr_surface.c_MakeDebugPortalSurfs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@SYS_VRB = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [30 x i8] c"--- MakeDebugPortalSurfs ---\0A\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"debugportals\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MakeDebugPortalSurfs(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %4 = load i32, i32* @SYS_VRB, align 4
  %5 = call i32 @Sys_FPrintf(i32 %4, i8* getelementptr inbounds ([30 x i8], [30 x i8]* @.str, i64 0, i64 0))
  %6 = call i32* @ShaderInfoForShader(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0))
  store i32* %6, i32** %3, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @MakeDebugPortalSurfs_r(i32 %9, i32* %10)
  ret void
}

declare dso_local i32 @Sys_FPrintf(i32, i8*) #1

declare dso_local i32* @ShaderInfoForShader(i8*) #1

declare dso_local i32 @MakeDebugPortalSurfs_r(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
